--- a/feedbackpp.html
+++ b/feedbackpp.html
@@ -67,8 +67,10 @@
                         <button id = "close-custom-tc" type = "button" class = "btn btn-primary" onclick="cancelCustomTC()">Cancel</button>
                     </div>
                     <div id = "autograder" style="display: none">
-                        <label class="form-label" for="customFile">Input Submission</label>
-                        <input type="file" class="form-control" id="submissionFile" onchange="displayFileData(event)"/>
+                        <id class="form-label" for="customFile">Input Submission:</label>
+                        <button class="btn btn-primary" id = "file-upload-button">
+                            <i class="fa fa-image"></i>Upload file<input type="file" class="" id="submissionFile" style = "opacity: 0" oninput="displayFileData(event)"/>
+                        </button>
                         <div style ="width: 75%; display:table;">
                             <div style ="display: table-row;">
                                 <div id = "file-table" style="display:table-cell;"></div>
